根据自己需要修改

--- a/bin/repeater.properties
+++ b/bin/repeater.properties
@@ -12,6 +12,7 @@ repeat.record.url=http://10.0.132.24:8001/facade/api/record/%s/%s
 repeat.config.url=http://10.0.132.24:8001/facade/api/config/%s/%s
 # \u5FC3\u8DF3\u4E0A\u62A5\u914D\u7F6E
 repeat.heartbeat.url=http://10.0.132.24:8001/module/report.json
+repeat.port=9696
 # \u662F\u5426\u5F00\u542F\u8131\u673A\u5DE5\u4F5C\u6A21\u5F0F
 repeat.standalone.mode=false
 # \u662F\u5426\u5F00\u542Fspring advice\u62E6\u622A
