--- a/repeater-console/pom.xml
+++ b/repeater-console/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <spring.boot.version>1.4.7.RELEASE</spring.boot.version>
         <jackson.version>2.12.3</jackson.version>
+        <quartz.version>2.0.0.RELEASE</quartz.version>
     </properties>
 
     <artifactId>repeater-console</artifactId>
