--- a/repeater-console/repeater-console-start/src/main/resources/application.properties
+++ b/repeater-console/repeater-console-start/src/main/resources/application.properties
@@ -2,25 +2,24 @@ spring.application.name=repeater-server
 server.port=8001
 mybatis.type-aliases-package=com.alibaba.repeater.console.dal.model
 # \u672C\u5730mysql\u6570\u636E\u6E90\u6D4B\u8BD5
-spring.datasource.url=jdbc:mysql://192.168.163.201:3306/repeater?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=zhaowanxin
-spring.datasource.password=abcd123%
+spring.datasource.url=jdbc:mysql://10.0.18.90:3306/mcprd?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=skypool
+spring.datasource.password=skypool
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder: trace
 # \u4F7F\u7528\u672C\u5730\u6570\u636E\u6E90\u8FDB\u884C\u6D4B\u8BD5
-console.use.localCache =false
+console.use.localCache=false
 # \u793A\u4F8B\u56DE\u653E\u5730\u5740\uFF08\u5DE5\u7A0B\u4F7F\u7528\u9700\u8981\u7EF4\u62A4repeater\u63D2\u4EF6\u7684ip:port\u66FF\u6362\uFF0C\u6307\u5B9Aip\u53D1\u8D77\u56DE\u653E\uFF09
 repeat.repeat.url=http://%s:%s/sandbox/%s/module/http/repeater/repeat
 # \u793A\u4F8B\u914D\u7F6E\u5730\u5740\uFF08\u5DE5\u7A0B\u4F7F\u7528\u9700\u8981\u7EF4\u62A4repeater\u63D2\u4EF6\u7684ip:port\u66FF\u6362\uFF0C\u6307\u5B9Aip\u53D1\u8D77\u56DE\u653E\uFF09
 repeat.config.url=http://%s:%s/sandbox/%s/module/http/repeater/pushConfig
 # \u793A\u4F8B\u91CD\u8F7D\u5730\u5740\uFF08\u5DE5\u7A0B\u4F7F\u7528\u9700\u8981\u7EF4\u62A4repeater\u63D2\u4EF6\u7684ip:port\u66FF\u6362\uFF0C\u6307\u5B9Aip\u53D1\u8D77\u56DE\u653E\uFF09
 repeat.reload.url=http://%s:%s/sandbox/%s/module/http/repeater/reload
-
 # velocity
-spring.velocity.cache= false
+spring.velocity.cache=false
 spring.velocity.charset=UTF-8
 spring.velocity.check-template-location=true
 spring.velocity.content-type=text/html
@@ -29,3 +28,7 @@ spring.velocity.resource-loader-path=classpath:/velocity/templates
 spring.velocity.prefix=/velocity/templates/
 spring.velocity.toolboxConfigLocation=/velocity/toolbox.xml
 spring.velocity.suffix=.vm
+#\u4EFB\u52A1\u76F8\u5173\u5F00\u5173
+job.open=false
+job.replay.open=true
+job.replay.cron=*/5 * * * * ?
