--- a/repeater-console/repeater-console-start/pom.xml
+++ b/repeater-console/repeater-console-start/pom.xml
@@ -51,6 +51,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
@@ -80,6 +85,13 @@
                 <configuration>
                     <executable>true</executable>
                     <mainClass>com.alibaba.repeater.console.start.Application</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
         </plugins>
