--- a/repeater-console/repeater-console-service/pom.xml
+++ b/repeater-console/repeater-console-service/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
             <version>${quartz.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
