--- a/repeater-console/repeater-console-start/src/main/resources/application.properties
+++ b/repeater-console/repeater-console-start/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=repeater-server
-server.port=8001
+server.port=9898
 mybatis.type-aliases-package=com.alibaba.repeater.console.dal.model
 # \u672C\u5730mysql\u6570\u636E\u6E90\u6D4B\u8BD5
-spring.datasource.url=jdbc:mysql://10.0.18.90:3306/mcprd?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://10.0.18.122:3306/mcprd?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=skypool
 spring.datasource.password=skypool
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -29,6 +29,6 @@ spring.velocity.prefix=/velocity/templates/
 spring.velocity.toolboxConfigLocation=/velocity/toolbox.xml
 spring.velocity.suffix=.vm
 #\u4EFB\u52A1\u76F8\u5173\u5F00\u5173
-job.open=false
+job.open=true
 job.replay.open=true
 job.replay.cron=*/5 * * * * ?
